--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,16 @@
   body {
     margin: 0;
     padding: 0;
+    background-color: var(--black);
   }
   
   a {
     color: inherit;
   } 
+
+  #root {
+    min-height: calc(100vh - var(--bodyPaddingTop));
+    display: flex;
+    flex-direction: column;
+
+  }
